# vortex-auv-firmware

./: README.md
bms_rpi_pico/: CMakeLists.txt  build.sh  main.c
precharge_arduino/: precharge.ino
precharge_arduino/lib/DataReading/: dataReading.cpp  dataReading.hpp  dataReadingAnalogue.cpp  dataReadingAnalogue.hpp  dataReadingDigital.cpp  dataReadingDigital.hpp
precharge_arduino/precharge_platformio/lib/DataReading/: dataReading.cpp
precharge_arduino/precharge_platformio/src/: main.cpp
precharge_arduino/src/: main.cpp
psm_rpi_pico/: CMakeLists.txt  README.md  main.c
psm_rpi_pico/psm_rp2040_zero/: psm_rp2040_zero.ino
raspberry_pi_pico_PWM_slave_code/: main.c
raspberry_pi_pico_slave_code/: main.c
